refactor: update seed file

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prisma"
   ],
   "license": "MIT",
-  "author": "Felipe Dev",
+  "author": "Jéssica Prestelo",
   "type": "module",
   "main": "src/server.js",
   "scripts": {
